--- a/development/sass/main.scss
+++ b/development/sass/main.scss
@@ -1,10 +1,10 @@
 @import 'base';
 
 section:nth-child(odd){
-  background-color: #43fd93;
+  background-color: #FFFC00;
 }
 section:nth-child(even){
-  background-color: #fd9343;
+  background-color: #fff;
 }
 
 .launcher{
@@ -14,8 +14,8 @@ section:nth-child(even){
   align-items: center;
   button{
     display: none;
-    border: 0;
-    background-color: #fd9343;
+    border: 2px solid #000;
+    background-color: #fff;
     font-size: 1.5rem;
     padding: 1rem 2rem;
   }
@@ -30,26 +30,30 @@ section:nth-child(even){
     height: 100%;
     z-index: 2;
     transition: all 300ms ease-in-out;
+    background-color: #000;
   }
 
   &-cover.over{
     top: -130%;
   }
   &-content{
-    color: #fff;
     height: 100%;
     overflow: auto;
+    &:not(.video){
+      padding: 1rem;
+    }
   }
 }
 
 .progress{
-  background-color: rgba(255,255,255,0.3);
-  box-shadow: 0 0 5px rgba(0,0,0, 0.2);
+  border: 2px solid #000;
+  background-color: #fff;
   width: 200px;
+  padding: 0 1rem;
   &-bar{
     height: 10px;
     width: 0%;
-    margin: 1rem;
-    background-color: rgba(0,0,0,0.5);
+    margin: 1rem 0;
+    background-color: #000;
   }
 }
