remove the bottom snap from asset manager

--- a/development/sass/main.scss
+++ b/development/sass/main.scss
@@ -6,6 +6,9 @@ section:nth-child(odd){
 section:nth-child(even){
   background-color: #fff;
 }
+#video{
+  display: none;
+}
 
 .launcher{
   display: flex;
