--- a/development/sass/main.scss
+++ b/development/sass/main.scss
@@ -50,6 +50,37 @@ section:nth-child(even){
   }
 }
 
+.content-more{
+  .snap-cover{
+    &::before,
+    &::after{
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 0%);
+      text-shadow: 0 0 10px #000;
+      color: #fff;
+      text-align: center;
+      width: 60px;
+      font-size: 1.1rem;
+    }
+    &::before{
+      content: "⌃";
+      bottom: 15px;
+    }
+  }
+  &.video{
+    .snap-cover::after{
+      content: "WATCH";
+    }
+  }
+  &.html{
+    .snap-cover::after{
+      content: "READ";
+    }
+  }
+}
+
 .progress{
   border: 2px solid #000;
   background-color: #fff;
