--- a/development/sass/_base.scss
+++ b/development/sass/_base.scss
@@ -26,10 +26,12 @@ body{
 
 }
 main{
-  width: 100%;
-  height: 100%;
+  min-width: 320px;
+  min-height: 480px;
   max-width: 480px;
   max-height: 853px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   background-color: #fff;
   box-shadow: 0 0 5px rgba(0,0,0, 0.4);
@@ -69,8 +71,11 @@ canvas{
   width: 100%;
   height: 100%;
 }
-
-video::-webkit-media-controls-play-button,
+video::-webkit-media-controls{
+  /*opacity: 0;*/
+  pointer-events: none;
+}
+/*video::-webkit-media-controls-play-button,*/
 video::-webkit-media-controls-start-playback-button {
   opacity: 0;
   pointer-events: none;
