--- a/development/sass/main.scss
+++ b/development/sass/main.scss
@@ -1,3 +1,4 @@
+@import 'node_modules/bourbon/app/assets/stylesheets/_bourbon.scss';
 @import 'normalize';
 @import 'typebase';
 @import 'base';
@@ -133,5 +134,60 @@ section{
     transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0.2s;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  }
+}
+
+.how-to{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.85);
+  color: #fff;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+
+  &-close{
+    position: relative;
+    right: 10px;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    align-self: flex-end;
+    margin: 1.5rem 1rem 0.5rem;
+
+    &::before, &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      top: 50%;
+      left: 0;
+      background: #fff;
+      height: 8px;
+      margin-top: -4px;
+    }
+    &::before {
+      @include transform(rotate(45deg));
+    }
+    &::after {
+      @include transform(rotate(-45deg));
+    }
+  }
+
+  &-image{
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+
+  &-message{
+    font-size: 1rem;
+    margin: 1rem;
+    color: #fff;
   }
 }
