finished adding license to all the files

--- a/development/sass/main.scss
+++ b/development/sass/main.scss
@@ -1,11 +1,26 @@
+/*!
+Sunil Patel, Developer, POV Digital | github.com/povdocs/pov-mobile-storytelling
+Copyright (C) 2016 POV | American Documentary Inc.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
 @import 'node_modules/bourbon/app/assets/stylesheets/_bourbon.scss';
 @import 'normalize';
 @import 'typebase';
 @import 'base';
 
-section{
-  background-color: #000;
-}
 #video{
   display: none;
 }
